# fredprime-legal-system

./: -------------------.txt  .bandit  .codex_config.yaml  .dockerignore  .drone.yml  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  60th 14th Court Docket.txt  =4.0.0  AGENTS.md  AI_ML_IMPLEMENTATION_SUMMARY.md  AI_ML_INTEGRATION_INDEX.md  ALL 60th DOCKETS.txt  BINDER_BUILDER.py  BLEED THEM DRY FEDERAL LAWSUIT.txt  BUILD_SUMMARY.md  BenchbookMCR Rules Plugin + LEXVAULT + Violation Graph Toolkit.py  Build_And_Upload_Master_Litigation_Pack_Z.py  CHANGELOG.md  CHAT BREAKDOWN OF EVENTS.txt  CHAT RESEARCH ON THE RIGHT TRACK.txt  CI_CD_GUIDE.md  CI_CD_IMPROVEMENTS.md  CI_CD_README.md  CODEOWNERS  CODE_IMPROVEMENT_INDEX.md  CODE_OF_CONDUCT.md  CODE_REFACTORING_PLAN.md  CODE_REFINEMENT_REPORT.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_COMPLETION_REPORT.md  CONTRIBUTING.md  COPILOT_AGENT.md  Copy_of_Untitled2.ipynb  DEEP RESEARCH ALDEN GLOBAL HOA.txt  DEPLOYMENT_CHECKLIST.txt  DEV_SETUP.md  DOCUMENT_NEEDS_ENGINE_v9999.py  (+185 more)
.circleci/: README.md  config.yml
.codex/: INSTRUCTIONS.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md  pull_request_template.yml  rulesets.json
agents/: .gitkeep  README.md  __init__.py  loader.py  menu.py  michigan_reference.py
ai/: __init__.py  ai_pipeline_orchestrator.py  argument_reasoning.py  evidence_llm_analyzer.py  nlp_document_processor.py
binder/: tab_forger.py
blueprints/: esd_blueprint_graph.md
cli/: __init__.py  build.py  generate_manifest.py  ingest.py  validate.py  windows_drive_organizer.py
config/: __init__.py  network_policy.example.json  paths.json  workflows.yaml
contradictions/: contradiction_matrix.py
core/: __init__.py  assets_registry.py  constants.py  exceptions.py  local_llm.py  network_broker.py  network_policy.py
data/: forms_manifest.json  hf_llama_model_doc_extract.json
docs/: ADVANCED_DEVELOPMENT.md  AI_ML_INTEGRATION.md  CODEX_INSTRUCTIONS_EPOCH2.md  COPILOT_USAGE.md  CYCLEPACK_CONVERGENCE.md  DRIVEORGANIZERPRO_README.md  ENV_SECRETS_AUDIT.md  FAQ.md  GRAPH_GAPS.md  INSTALLATION.md  MAKEFILE_USAGE.md  OPEN_SOURCE_RULESETS.md  QUICK_REFERENCE.md  README.md  README_MCP.md  RUNBOOK.md  TROUBLESHOOTING.md  USER_GUIDE.md  append_only_registry.md  assets_registry_template.json  bootstrap_prerequisites.md  high_impact_modules.md  litigation_os_architecture.md  master_instructions.md  network_policy_template.json  organizer_appendix.md  quick_start.md  windows_drive_organizer_runbook.md
entity_trace/: ai_entity_review.py
examples/: advanced_usage.py  custom_config_example.py
federal/: complaint_generator.py
foia/: __init__.py  autopacker.py  video_request_builder.py
fused_kernels_lab_v3/: README.md
graph/: edges.csv  nodes.csv
gui/: __init__.py  frontend.py
integration_tests/: test_manifest.py
integrations/: github_integration.py
mifile/: stack_dispatcher.py
modules/: benchbook_loader.py  codex_guardian.py  codex_manifest.py  codex_supreme.py  fts_cli.py  hash_utils.py  high_impact_module_registry.py  meek_ingest_cli.py
motions/: emergency_injunction.py  protective_order.py
neo4j/: constraints.cypher  import_nodes_edges.cypher
notices/: notice_of_claim.py
output/: fredprime_litigation_system.json  (+1 more)
scripts/: run.bat  (+17 more)
(+261 files in other folders)
